<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizDroid</string>
    <string name="topics">Topics</string>
    <string name="action_settings">Settings</string>
    <string name="topic_math">Math</string>
    <string name="topic_physics">Physics</string>
    <string name="topic_super_heroes">Marvel Super Heroes</string>

    <string name="download_location">"http://tednewardsandbox.site44.com/questions.json"</string>

    <string name="preferecence_file_key">edu.washington.nadava.quizdroid.PREFERENCE_FILE_KEY</string>

    <!-- TopicActivity -->
    <string name="title_activity_topic">Topic Overview</string>
    <string name="start_quiz">Begin</string>
    <string name="questions_count">Questions:</string>
    <string name="description">Description:</string>
    <string name="topic_math_description">History of math, mathematical concepts and problems.</string>
    <string name="topic_physics_description">History of physics, physical concepts and problems.</string>
    <string name="topic_super_heroes_description">Marvel super heroes, comic books and movie lore.</string>
    <string name="title_activity_quiz">QuizDroid</string>
    <string name="hello_world">Hello world!</string>

    <!-- QuizActivity -->
    <string name="submit">Submit</string>
    <string name="title_activity_answer">QuizDroid - Answer</string>

    <!-- AnswerActivity -->
    <string name="your_answer">Your answer:</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="next_question">Next question</string>
    <string name="finish_quiz">Finish</string>
    <string name="answered_corretly">Correct! :)</string>
    <string name="answered_incorrectly">Incorrect :(</string>
    <string name="quiz_stats" formatted="false">Answered %d out of %d questions correctly.</string>
    <string name="topic_icon">topicIcon</string>

</resources>
